Fixed gap issue;

--- a/src/assets/toolkit/styles/6-components/_components.pagination.scss
+++ b/src/assets/toolkit/styles/6-components/_components.pagination.scss
@@ -96,9 +96,9 @@
   li {
     display: inline-block;
     list-style: none;
-
+    
     @include breakpoint(desktop) {
-      margin-bottom: 0 !important; //TODO - fix specificity across the board..;
+      margin: $gap-small 0 !important; //TODO - fix specificity across the board..
     }
   }
 }
